--- a/Course 3 - Advance Computer Vision/W3/assignment/C3W3_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W3/assignment/C3W3_Assignment.ipynb
@@ -1252,8 +1252,8 @@
         "  ### START CODE HERE ###\n",
         "\n",
         "  # Upsample `o` above and crop any extra pixels introduced\n",
-        "  o = None\n",
-        "  o = None\n",
+        "  o = tf.keras.layers.Conv2DTranspose(n, (7, 7), strides = 2, padding = 'same')(o)\n",
+        "  o = tf.keras.layers.Cropping2D(cropping=(1,1))(o)\n",
         "\n",
         "  # load the pool 4 prediction and do a 1x1 convolution to reshape it to the same shape of `o` above\n",
         "  o2 = None\n",
