--- a/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_1_FashionMNIST-CAM.ipynb
+++ b/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_1_FashionMNIST-CAM.ipynb
@@ -555,11 +555,11 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
