--- a/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_2_CatsDogs-CAM.ipynb
+++ b/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_2_CatsDogs-CAM.ipynb
@@ -60,7 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data = tfds.load('cats_vs_dogs', split='train[:80%]', as_supervised=True)\n",
+        "train_data = tfds.load('cats_vs_dogs', split='train[:80%]', as_supervised=True)          # The [:80%] syntax specifies a subset (slice) of the training data, taking the first 80% of the examples and excluding the remaining 20%.\n",
         "validation_data = tfds.load('cats_vs_dogs', split='train[80%:90%]', as_supervised=True)\n",
         "test_data = tfds.load('cats_vs_dogs', split='train[-10%:]', as_supervised=True)"
       ]
@@ -328,11 +328,11 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
